--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -26,30 +26,52 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get latest tag
-        id: get_tag
+      - name: Check if any tags exist
+        id: check_tags_exist
         run: |
           git fetch --tags
-          echo "latest_tag=$(git describe --tags --abbrev=0)" >> "$GITHUB_OUTPUT"
+          TAG_COUNT=$(git tag | wc -l)
+          if [ "$TAG_COUNT" -eq 0 ]; then
+            echo "has_tags=false" >> "$GITHUB_OUTPUT"
+            echo "latest_tag=v0.0.0" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_tags=true" >> "$GITHUB_OUTPUT"
+            LATEST_TAG=$(git describe --tags --abbrev=0)
+            echo "latest_tag=$LATEST_TAG" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Check if meaningful commits exist since latest tag
         id: check_commits
         run: |
-          LATEST_TAG="${{ steps.get_tag.outputs.latest_tag }}"
-          CHANGED_FILES="$(git diff --name-only "${LATEST_TAG}..HEAD" | grep -v '^manifest.json$' || true)"
-          if [ -n "$CHANGED_FILES" ]; then
+          if [ "${{ steps.check_tags_exist.outputs.has_tags }}" = "false" ]; then
+            # No tags exist, so we should create first release
             echo "commit_count=1" >> "$GITHUB_OUTPUT"
-            echo "changed_files<<EOF" >> "$GITHUB_OUTPUT"
-            printf '%s\n' "$CHANGED_FILES" >> "$GITHUB_OUTPUT"
-            echo "EOF" >> "$GITHUB_OUTPUT"
+            CHANGED_FILES=$(git ls-files | grep -v '^manifest.json$' || true)
+            if [ -n "$CHANGED_FILES" ]; then
+              echo "changed_files<<EOF" >> "$GITHUB_OUTPUT"
+              printf '%s\n' "$CHANGED_FILES" >> "$GITHUB_OUTPUT"
+              echo "EOF" >> "$GITHUB_OUTPUT"
+            else
+              echo "changed_files=Initial release" >> "$GITHUB_OUTPUT"
+            fi
           else
-            echo "commit_count=0" >> "$GITHUB_OUTPUT"
+            LATEST_TAG="${{ steps.check_tags_exist.outputs.latest_tag }}"
+            CHANGED_FILES="$(git diff --name-only "${LATEST_TAG}..HEAD" | grep -v '^manifest.json$' || true)"
+            if [ -n "$CHANGED_FILES" ]; then
+              echo "commit_count=1" >> "$GITHUB_OUTPUT"
+              echo "changed_files<<EOF" >> "$GITHUB_OUTPUT"
+              printf '%s\n' "$CHANGED_FILES" >> "$GITHUB_OUTPUT"
+              echo "EOF" >> "$GITHUB_OUTPUT"
+            else
+              echo "commit_count=0" >> "$GITHUB_OUTPUT"
+            fi
           fi
 
       - name: Get latest release tag (from GitHub API)
         id: get_latest_release
         run: |
           LATEST_RELEASE_TAG=$(curl -sL -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/latest" | jq -r .tag_name)
           if [ -z "$LATEST_RELEASE_TAG" ] || [ "$LATEST_RELEASE_TAG" = "null" ]; then
             LATEST_RELEASE_TAG="v1.0.0"
